--- a/package.json
+++ b/package.json
@@ -25,47 +25,47 @@
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
     "@ember/render-modifiers": "^1.0.2",
-    "@ember/test-helpers": "^2.2.0",
+    "@ember/test-helpers": "^2.2.8",
     "@glimmer/component": "^1.0.3",
     "@glimmer/tracking": "^1.0.3",
     "babel-eslint": "^10.1.0",
     "bootstrap": "^4.6.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.10.1",
-    "ember-bootstrap": "^4.6.3",
-    "ember-cli": "^3.25.3",
+    "ember-auto-import": "^1.11.3",
+    "ember-bootstrap": "^4.9.0",
+    "ember-cli": "^3.26.1",
     "ember-cli-app-version": "^4.0.0",
-    "ember-cli-babel": "^7.23.1",
+    "ember-cli-babel": "^7.26.6",
     "ember-cli-dependency-checker": "^3.2.0",
-    "ember-cli-htmlbars": "^5.3.2",
-    "ember-cli-inject-live-reload": "^2.0.2",
+    "ember-cli-htmlbars": "^5.7.1",
+    "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-json-module": "^1.0.0",
     "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
-    "ember-cli-terser": "^4.0.1",
+    "ember-cli-terser": "^4.0.2",
     "ember-data": "~3.25.0",
     "ember-export-application-global": "^2.0.1",
-    "ember-fetch": "^8.0.4",
+    "ember-fetch": "^8.1.0",
     "ember-load-initializers": "^2.1.2",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-page-title": "^6.2.1",
-    "ember-qunit": "^5.1.2",
+    "ember-page-title": "^6.2.2",
+    "ember-qunit": "^5.1.4",
     "ember-resolver": "^8.0.2",
-    "ember-source": "~3.25.1",
+    "ember-source": "^3.25.4",
     "ember-template-lint": "^2.18.1",
     "ember-truth-helpers": "^3.0.0",
     "ember-welcome-page": "^4.0.0",
-    "eslint": "^7.20.0",
+    "eslint": "^7.29.0",
     "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-ember": "^10.2.0",
+    "eslint-plugin-ember": "^10.5.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-prettier": "^3.4.0",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1",
-    "qunit": "^2.14.0",
+    "prettier": "^2.3.1",
+    "qunit": "^2.16.0",
     "qunit-dom": "^1.6.0",
-    "sass": "^1.32.8"
+    "sass": "^1.35.1"
   },
   "engines": {
     "node": "10.* || >= 12"
