--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^1.12.0",
     "ember-bootstrap": "^4.9.0",
-    "ember-cli": "^3.28.0",
+    "ember-cli": "^3.28.4",
     "ember-cli-app-version": "^4.0.0",
     "ember-cli-babel": "^7.26.6",
     "ember-cli-dependency-checker": "^3.2.0",
@@ -74,6 +74,7 @@
     "edition": "octane"
   },
   "dependencies": {
-    "http-server-spa-with-auth": "^1.0.7"
+    "http-server-spa-with-auth": "^1.0.7",
+    "serve": "^13.0.2"
   }
 }
