Update the email address.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "description": "Ember.js GUI for SOMHunter Video Search Tool.",
-  "author": "František Mejzlík <frankmejzlik@gmail.com>",
+  "author": "František Mejzlík <frankmejzlik@protonmail.com>",
   "contributors": [
     "Mirek Kratochvil <exa.exa@gmail.com>",
     "Patrik Veselý <prtrikvesely@gmail.com>"
